Fix dredd tests. picture upload still not working due to the body listener
